# pkgsrc-applet

./: .tm_project2.cache  INSTALL  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.ac  depcomp  install-sh  missing
.anjuta/session/: anjuta.session  dock-layout.xml
src/: Makefile  Makefile.am  Makefile.in  __init__.py
